# didactic-octo-happiness

./: .env.template  .gitignore  30_ip_info.sh  ANALYSIS_SUMMARY.md  COMPREHENSIVE_ARCHITECTURE_DOCUMENTATION.md  COMPREHENSIVE_DOCUMENTATION.md  CONFIGURATION.md  COVERAGE_TEST_REPORT.md  Cargo.toml  Containerfile  DATABASE_MIGRATION.md  DEVELOPMENT_AND_DEPLOYMENT_PROCESSES.md  DOCUMENTATION_LEARNING_SUMMARY.md  DOCUMENTATION_VALIDATION_REPORT.md  Dockerfile  Dockerfile.optimized  Dockerfile.precompiled  IMPLEMENTATION_SUMMARY.md  README.md  RUST_CI_README.md  SECURITY.md  TECHNICAL.md  automation-nation-pod.yaml  bash_perf_suite.sh  collect_info.sh  collect_info_fast.sh  collect_info_optimized.sh  comprehensive_test_suite.sh  docker-compose.swarm.yml  docker-compose.yml  final_summary.sh  lxc.conf  perf_analysis.sh  perf_test_suite.sh  performance_test.sh  quick_start.sh  setup_lxc.sh  simple_perf_test.sh  validate_documentation.sh
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: architecture_support.md  bug_report.md  feature_request.md  performance_issue.md  plugin_development.md
.github/workflows/: ci.yml  ci_test_suite.yml  comprehensive-ci.yml  quick-validation.yml  release.yml  security.yml
migrations/: 001_initial_schema.sql  20241215_001_initial_schema.sql
monitoring/grafana/dashboards/: dashboards.yml
monitoring/grafana/datasources/: datasources.yml
monitoring/logstash/pipeline/: logstash.conf
monitoring/prometheus/: prometheus.yml
netbox-build/: Dockerfile.netbox  docker-entrypoint.sh  install-plugins.sh
netbox-build/netbox-config/: configuration.py
plugins/: 10_os_info.sh  20_hardware_info.sh  25_virtualization_info.sh  30_ip_info.sh  31_network_stats.sh  32_lldp_neighbors.sh  40_packages_execs.sh  50_uptime_info.sh
proj-SHA512_of_folder_creation_time/application_configs/: README.md
proj-SHA512_of_folder_creation_time/bare_metal_intelligence_gathering/: README.md
proj-SHA512_of_folder_creation_time/docker-compose-yaml/: README.md
proj-SHA512_of_folder_creation_time/repo_cleanup_scripts/: README.md
proj-SHA512_of_folder_creation_time/repo_init_scripts/: README.md
src/: auth_handlers.rs  auth_stubs.rs  certificate_api.rs  certificate_manager.rs  comprehensive_test_suite.rs  config.rs  container_runtime.rs  dashboard_api.rs  dashboard_manager.rs  database.rs  database_rbac.rs  database_tests.rs  deployment_profiles.rs  docker_manager.rs  executor.rs  github_api.rs  kubernetes_manager.rs  lib.rs  lxc_manager.rs  os_support.rs  password_reset.rs  performance_optimizer.rs  plugin_marketplace.rs  plugin_marketplace_api.rs  podman_manager.rs  precompiled_builder.rs  privilege.rs  rbac.rs  reporter.rs  sso.rs  system_profiler.rs  types.rs  validator.rs  web_handlers.rs  web_handlers.rs.backup  web_test_suite.rs  web_test_suite_old.rs  web_types.rs
templates/: index.html
test/integration/: collect_info_test.bats
test/plugins/: 10_os_info_test.bats  20_hardware_info_test.bats  25_virtualization_info_test.bats  30_ip_info_test.bats  31_network_stats_test.bats  32_lldp_neighbors_test.bats  40_packages_execs_test.bats  50_uptime_info_test.bats
wiki/: Architecture-Overview.md  Glossary.md  Home.md  Installation-Guide.md
