[package]
name = "ci_test_suite"
version = "0.1.0"
edition = "2021"
description = "CI test suite for collect_info.sh script with privilege escalation testing"
authors = ["Automation Nation CI"]
license = "MIT"

[[bin]]
name = "ci_runner"
path = "src/bin/ci_runner.rs"

[[bin]]
name = "web_server"
path = "src/bin/web_server.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
tempfile = "3.0"
regex = "1.0"
futures = "0.3"
libc = "0.2"
# Web server dependencies
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
# HTTP client for GitHub API
reqwest = { version = "0.11", features = ["json"] }
# Configuration management
config = "0.14"
# Database/storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.0"
axum-test = "14.0"
